--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -6,6 +6,10 @@ name: 'Chromatic'
 # Event for the workflow
 on: push
 
+defaults:
+  run:
+    working-directory: ./packages/design-system
+
 # List of jobs
 jobs:
   chromatic-deployment:
