--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -18,6 +18,8 @@ jobs:
     # Job steps
     steps:
       - uses: actions/checkout@v1
+      - name: Find directory
+        run: echo ${{ github.workspace }}
       - name: Install dependencies
         # 👇 Install dependencies with the same package manager used in the project (replace it as needed), e.g. yarn, npm, pnpm
         run: yarn
