--- a/.github/workflows/storybook-tests.yml
+++ b/.github/workflows/storybook-tests.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           node-version: '16.x'
       - name: Install dependencies
-        run: yarn
+        run: yarn --frozen-lockfile
       - name: Install Playwright
         run: npx playwright install --with-deps
       - name: Run Storybook tests
